15.jan (lv)
      - feature request #8355: bww import: calculate time signature if necessary
12.jan (la)
      - add SVG icons for note entry toolbar
      - change toolbar icon default size
      - fix default saveas and save copy directory
      - display palettes on first start
11.jan (la)
      - fix #8613: MuseScore doesn't ask to restore session if you open from file
      - fix #8612: Cannot paste to measure with a grace note before beat 1
9.jan (lv)
      - fix #8546: MusicXML import: dynamics in notations element are ignored
7.jan (la)
      - fix #7303: Collision between rest and accidentals
      - fix #6599: Command line option to change config/settings directory
6.jan (la)
      - enable time signature deletion in timesig palette
5.jan (lv)
      - feature request #8355: bww import: hide key signature disabled
      (la)
      - fix #8503: Spacebar for play/pause (patch by David Bolton)
      - fix #6362: Tempo text position not saved for part > 1
4.jan (ws)
      - fix #6347: Multiple grace notes do not copy correctly
      (la)
      - fix #8357: Key sig properties : hide courtesy, hide naturals (patch by Miwarre)
      - add bagpipe in instruments.xml, change to bagpipe sound on bww import
3.jan.2011 (lv)
      - feature request #8355: bww import: add end barline
      - feature request #8355: bww import: hide key signature (not complete yet)
      - fix #8498: musicxml import/export: print-object="no" not handled for key signature
      - fix #8435: musicxml import: print-object="no" ignored on rest
2.jan.2011 (lv)
      - fix #8474: MusicXML import: Audiveris ".0" not handled in alter and in backup and forward duration
30.dec (lv)
      - fix #8428: musicxml import: voices mixed up
      - fix #4858: Courtesy accidentals do not import/export in MusicXML anymore
      - fix #8400: musicxml export: stem on whole note in triplet
29.dec (lv)
      - feature request #8355: bww import: fixed bww2mxml triplet beam
28.dec (lv)